@@ -294,6 +294,11 @@ void Client::SummonItem(uint32 item_id, sint16 charges, uint32 aug1, uint32 aug2
 				PutItemInInventory(to_slot, *inst, true);
 			}
 			safe_delete(inst);
+
+			if (!GetGM() && !IsDiscovered(item_id))
+			{
+				DiscoverItem(item_id);
+			}
 		}
 	}
 	else { // Item was already in inventory & is a LORE item or was a GM only item.  Give them a message about it.
